--- a/mobile/package.json
+++ b/mobile/package.json
@@ -25,6 +25,7 @@
     "expo-image": "~3.0.11",
     "expo-image-picker": "~17.0.10",
     "expo-linking": "~8.0.10",
+    "expo-media-library": "~18.2.1",
     "expo-router": "~6.0.19",
     "expo-splash-screen": "~31.0.12",
     "expo-status-bar": "~3.0.9",
