--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mobile",
-  "main": "expo-router/entry",
+  "main": "index.js",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
@@ -17,7 +17,7 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
-    "expo": "~54.0.29",
+    "expo": "~54.0.30",
     "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.12",
     "expo-document-picker": "~14.0.8",
@@ -26,11 +26,11 @@
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
     "expo-image-picker": "~17.0.10",
-    "expo-linking": "~8.0.10",
+    "expo-linking": "~8.0.11",
     "expo-media-library": "~18.2.1",
-    "expo-router": "~6.0.19",
+    "expo-router": "~6.0.21",
     "expo-sharing": "~14.0.8",
-    "expo-splash-screen": "~31.0.12",
+    "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
