--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "author": "Les YAMBOS",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.962.0",
     "@neondatabase/serverless": "^1.0.2",
     "@types/express": "^5.0.3",
     "bcryptjs": "^3.0.2",
