--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "express": "^5.1.0",
     "jest": "^30.2.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "path": "^0.12.7",
     "pg": "^8.16.3",
@@ -30,6 +31,7 @@
     "@eslint/js": "^9.38.0",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/pg": "^8.16.0",
     "@types/supertest": "^6.0.3",
     "eslint": "^9.38.0",
