--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "jest": "^30.2.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "neonctl": "^2.19.0",
     "nodemon": "^3.1.10",
     "path": "^0.12.7",
     "pg": "^8.16.3",
