--- a/mobile/package.json
+++ b/mobile/package.json
@@ -45,7 +45,8 @@
     "react-native-screens": "~4.16.0",
     "react-native-view-shot": "4.0.3",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "undefined": "@/components/tab-icon"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
