--- a/mobile/package.json
+++ b/mobile/package.json
@@ -46,10 +46,12 @@
     "react-native-view-shot": "4.0.3",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
+    "bcryptjs": "^2.4.3",
     "undefined": "@/components/tab-icon"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "@types/bcryptjs": "^2.4.6",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "typescript": "~5.9.2"
