--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,8 @@
     "nodemon": "^3.1.10",
     "path": "^0.12.7",
     "pg": "^8.16.3",
-    "supertest": "^7.1.4"
+    "supertest": "^7.1.4",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.38.0",
