change likes to be a table
Move likes off Profile.likedPostIds into a table-backed DbV5.likes with Like schema.
Add seed migration to populate db.likes from legacy likedPostIds and normalize like keys.
Serialize AsyncStorage writes/updates to prevent race-condition overwrites.
Fix like behavior to use the selected profile (Post uses toggleLike(sid, postId) fallback).
Make PostActions heart optimistic to avoid stale rows in memoized lists.
Ensure deletes cascade into likes (remove like rows and adjust counts where applicable).
Improve modal backdrops to use themed colors.modalBackdrop; tighten dialog typings for keyboardType.
Minor hook dependency fix in ProfileScreen.
Update SQL seed generator to leave legacy liked_post_ids empty (likes are table-backed).
Add uuid dependency (used by new mocks helper).

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "bcryptjs": "^2.4.3",
     "expo": "~54.0.30",
     "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.12",
@@ -46,12 +47,12 @@
     "react-native-view-shot": "4.0.3",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
-    "bcryptjs": "^2.4.3",
-    "undefined": "@/components/tab-icon"
+    "undefined": "@/components/tab-icon",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "@types/react": "~19.1.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/react": "~19.1.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "typescript": "~5.9.2"
