--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
   "main": "dist/server.js",
   "scripts": {
     "start": "tsc && node dist/server.js",
+    "predev": "tsc",
     "dev": "tsc -w & nodemon -q dist/server.js",
+    "smoke:profile": "node scripts/smokeProfile.mjs",
     "lint": "eslint . --ext .ts",
     "test": "jest --watch"
   },
@@ -19,6 +21,7 @@
     "body-parser": "^2.2.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "firebase-admin": "^13.6.0",
     "jest": "^30.2.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
@@ -27,7 +30,8 @@
     "path": "^0.12.7",
     "pg": "^8.16.3",
     "supertest": "^7.1.4",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "ws": "^8.19.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.38.0",
@@ -36,6 +40,7 @@
     "@types/multer": "^2.0.0",
     "@types/pg": "^8.16.0",
     "@types/supertest": "^6.0.3",
+    "@types/ws": "^8.18.1",
     "eslint": "^9.38.0",
     "globals": "^16.4.0",
     "ts-jest": "^29.4.5",
