--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "mobile",
+  "name": "feedverse",
   "main": "index.js",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
@@ -21,6 +21,7 @@
     "expo": "~54.0.30",
     "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.12",
+    "expo-dev-client": "~6.0.20",
     "expo-document-picker": "~14.0.8",
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.10",
@@ -29,6 +30,7 @@
     "expo-image-picker": "~17.0.10",
     "expo-linking": "~8.0.11",
     "expo-media-library": "~18.2.1",
+    "expo-notifications": "~0.32.15",
     "expo-router": "~6.0.21",
     "expo-sharing": "~14.0.8",
     "expo-splash-screen": "~31.0.13",
@@ -49,6 +51,8 @@
     "react-native-worklets": "0.5.1",
     "undefined": "@/components/tab-icon",
     "uuid": "^13.0.0"
+    ,
+    "react-native-get-random-values": "^1.8.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
