--- a/mobile/eas.json
+++ b/mobile/eas.json
@@ -6,7 +6,10 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "EXPO_PUBLIC_API_BASE_URL": "https://feedverse-production.up.railway.app"
+      }
     },
     "preview": {
       "distribution": "internal"
@@ -14,7 +17,7 @@
     "production": {
       "autoIncrement": true,
       "env": {
-        "EXPO_PUBLIC_API_BASE_URL": "http://192.168.0.31:8080"
+        "EXPO_PUBLIC_API_BASE_URL": "https://feedverse-production.up.railway.app"
       }
     },
     "development-simulator": {
