feat: make the run scripts windows compatible

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -146,3 +146,4 @@ PROMPT.md
 
 # Firebase admin SDK private key
 feedverse-510bc-firebase-adminsdk-fbsvc-c067f69184.json
+feedverse-510bc-firebase-adminsdk-fbsvc-4702684f07.json
