--- a/backend/.env-example
+++ b/backend/.env-example
@@ -10,16 +10,17 @@ DB_CHANNELBINDING='require'
 JWT_SECRET="[JWT_SECRET]"
 
 # Cloudflare
-R2_BUCKET='[BUCKET_NAME]'
-R2_ACCOUNT_ID='[R2_ACCOUNT_ID]'
-R2_ACCESS_KEY_ID='[R2_ACCESS_KEY_ID]'
-R2_SECRET_ACCESS_KEY='[R2_SECRET_ACCESS_KEY]'
-R2_TOKEN_VALUE='[R2_TOKEN_VALUE]'
-R2_JURISDICTION_SPECIFIC_ENDPOINT='[R2_JURISDICTION_SPECIFIC_ENDPOINT]'
-R2_PUBLIC_URL='[R2_PUBLIC_URL]'
+R2_BUCKET=[BUCKET_NAME]
+R2_ACCOUNT_ID=[R2_ACCOUNT_ID]
+R2_ACCESS_KEY_ID=[R2_ACCESS_KEY_ID]
+R2_SECRET_ACCESS_KEY=[R2_SECRET_ACCESS_KEY]
+R2_TOKEN_VALUE=[R2_TOKEN_VALUE]
+R2_JURISDICTION_SPECIFIC_ENDPOINT=[R2_JURISDICTION_SPECIFIC_ENDPOINT]
+R2_PUBLIC_URL=[R2_PUBLIC_URL]
 
 # Apple Expo Push Notification Key
-APNS_KEY_ID='[APNS_KEY_ID]'
+APNS_KEY_ID=[APNS_KEY_ID]
 
 # Expo
-EXPO_PUBLIC_API_BASE_URL='[your ip or domain]' # EXPO_PUBLIC_API_BASE_URL='[your ip or domain]' npx expo start -c
+EXPO_PUBLIC_API_BASE_URL=[your ip or domain] # EXPO_PUBLIC_API_BASE_URL='[your ip or domain]' npx expo start -c
+GOOGLE_APPLICATION_CREDENTIALS='[absolute path to your firebase admin sdk json file]'
