--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -145,5 +145,4 @@ vite.config.ts.timestamp-*
 PROMPT.md
 
 # Firebase admin SDK private key
-feedverse-510bc-firebase-adminsdk-fbsvc-c067f69184.json
-feedverse-510bc-firebase-adminsdk-fbsvc-4702684f07.json
+feedverse-510bc-firebase-adminsdk-fbsvc-*.*
