--- a/backend/.env-example
+++ b/backend/.env-example
@@ -10,33 +10,6 @@ DB_CHANNELBINDING='require'
 JWT_SECRET="[JWT_SECRET]"
 
 # Cloudflare
-R2_BUCKET=[BUCKET_NAME]
-R2_ACCOUNT_ID=[R2_ACCOUNT_ID]
-R2_ACCESS_KEY_ID=[R2_ACCESS_KEY_ID]
-R2_SECRET_ACCESS_KEY=[R2_SECRET_ACCESS_KEY]
-R2_TOKEN_VALUE=[R2_TOKEN_VALUE]
-R2_JURISDICTION_SPECIFIC_ENDPOINT=[R2_JURISDICTION_SPECIFIC_ENDPOINT]
-R2_PUBLIC_URL=[R2_PUBLIC_URL]
-
-# Apple Expo Push Notification Key
-APNS_KEY_ID=[APNS_KEY_ID]
-
-# Expo
-EXPO_PUBLIC_API_BASE_URL=[your ip or domain] # EXPO_PUBLIC_API_BASE_URL='[your ip or domain]' npx expo start -c
-GOOGLE_APPLICATION_CREDENTIALS='[absolute path to your firebase admin sdk json file]'
-
-SERVER_PORT=8080
-DB_URL='postgresql://[DB_USER]:[DB_PASSWORD]@[DB_HOST]/[DB_NAME]?sslmode=require&channel_binding=require'
-DB_HOST='[DB_HOST]'
-DB_NAME='[DB_NAME]'
-DB_USER='[DB_USER]'
-DB_PASSWORD='[DB_PASSWORD]'
-DB_PORT=5432
-DB_SSLMODE=true
-DB_CHANNELBINDING='require'
-JWT_SECRET="[JWT_SECRET]"
-
-# Cloudflare
 R2_BUCKET='[BUCKET_NAME]'
 R2_ACCOUNT_ID='[R2_ACCOUNT_ID]'
 R2_ACCESS_KEY_ID='[R2_ACCESS_KEY_ID]'
@@ -50,3 +23,5 @@ APNS_KEY_ID='[APNS_KEY_ID]'
 
 # Expo
 EXPO_PUBLIC_API_BASE_URL='[your ip or domain]' # EXPO_PUBLIC_API_BASE_URL='[your ip or domain]' npx expo start -c
+
+FIREBASE_SERVICE_ACCOUNT=[JSON one line object of your firebase admin sdk]
