--- a/mobile/package.json
+++ b/mobile/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
+    "eas-build-pre-install": "node ./scripts/eas-setup-google-services.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
