feat: add splash screen and added a SmartImage wrapper using expo-image

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -48,12 +48,12 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
+          "image": "./assets/images/FeedverseIcon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff",
+          "backgroundColor": "#7c96ec",
           "dark": {
-            "backgroundColor": "#000000"
+            "backgroundColor": "#7c96ec"
           }
         }
       ]
