--- a/mobile/package.json
+++ b/mobile/package.json
@@ -35,6 +35,7 @@
     "expo-router": "~6.0.21",
     "expo-sharing": "~14.0.8",
     "expo-splash-screen": "~31.0.13",
+    "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
@@ -44,6 +45,7 @@
     "react-native": "0.81.5",
     "react-native-draggable-flatlist": "^4.0.3",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
@@ -52,8 +54,6 @@
     "react-native-worklets": "0.5.1",
     "undefined": "@/components/tab-icon",
     "uuid": "^13.0.0"
-    ,
-    "react-native-get-random-values": "^1.8.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
