feat: replace db async storage by sqlite for local storage offline

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -47,7 +47,8 @@
             "backgroundColor": "#7c96ec"
           }
         }
-      ]
+      ],
+      "expo-sqlite"
     ],
     "experiments": {
       "typedRoutes": true,
