--- a/backend/package.json
+++ b/backend/package.json
@@ -23,9 +23,12 @@
     "@types/express": "^5.0.3",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.1",
+    "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
     "firebase-admin": "^13.6.0",
+    "helmet": "^8.1.0",
     "jest": "^30.2.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
@@ -39,6 +42,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.38.0",
+    "@types/cors": "^2.8.19",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
