feat:Update logging and monitoring, structured logging, error tracking, performance monitoring

--- a/backend/.env-example
+++ b/backend/.env-example
@@ -25,3 +25,17 @@ APNS_KEY_ID='[APNS_KEY_ID]'
 EXPO_PUBLIC_API_BASE_URL='[your ip or domain]' # EXPO_PUBLIC_API_BASE_URL='[your ip or domain]' npx expo start -c
 
 FIREBASE_SERVICE_ACCOUNT=[JSON one line object of your firebase admin sdk]
+
+# Observability (optional)
+NODE_ENV=test
+LOG_LEVEL=info
+LOG_PRETTY=0
+SENTRY_DSN=
+SENTRY_ENVIRONMENT=test
+SENTRY_TRACES_SAMPLE_RATE=0.1
+SENTRY_PROFILES_SAMPLE_RATE=0.0
+
+# Security (optional)
+CORS_ORIGINS=
+TRUST_PROXY=1
+BODY_SIZE_LIMIT=1mb
