--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.962.0",
     "@neondatabase/serverless": "^1.0.2",
+    "@sentry/node": "^10.36.0",
+    "@sentry/profiling-node": "^10.36.0",
     "@types/express": "^5.0.3",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.1",
@@ -36,6 +38,8 @@
     "nodemon": "^3.1.10",
     "path": "^0.12.7",
     "pg": "^8.16.3",
+    "pino": "^10.3.0",
+    "pino-http": "^11.0.0",
     "supertest": "^7.1.4",
     "uuid": "^13.0.0",
     "ws": "^8.19.0"
@@ -51,6 +55,7 @@
     "@types/ws": "^8.18.1",
     "eslint": "^9.38.0",
     "globals": "^16.4.0",
+    "pino-pretty": "^13.1.3",
     "ts-jest": "^29.4.5",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.2"
