--- a/mobile/app.json
+++ b/mobile/app.json
@@ -57,7 +57,8 @@
           }
         }
       ],
-      "expo-sqlite"
+      "expo-sqlite",
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true,
