--- a/backend/package.json
+++ b/backend/package.json
@@ -42,7 +42,8 @@
     "pino-http": "^11.0.0",
     "supertest": "^7.1.4",
     "uuid": "^13.0.0",
-    "ws": "^8.19.0"
+    "ws": "^8.19.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.38.0",
