feat: add sending emails to confirm changing password and for forgetting password

--- a/backend/.env-example
+++ b/backend/.env-example
@@ -1,5 +1,4 @@
 SERVER_PORT=8080
-# Preferred (Railway/Render/Heroku): single connection string.
 # Legacy alias supported: DB_URL
 DATABASE_URL='postgresql://[DB_USER]:[DB_PASSWORD]@[DB_HOST]/[DB_NAME]?sslmode=require&channel_binding=require'
 DB_HOST='[DB_HOST]'
@@ -39,3 +38,10 @@ SENTRY_PROFILES_SAMPLE_RATE=0.0
 CORS_ORIGINS=
 TRUST_PROXY=1
 BODY_SIZE_LIMIT=1mb
+
+# Forgotten password and Account verification
+ONE_TIME_CODE_SECRET=
+EMAIL_FROM=
+RESEND_API_KEY=
+EMAIL_PROVIDER=resend
+EMAIL_REPLY_TO=
