--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -71,6 +71,9 @@ web_modules/
 .env.*
 !.env.example
 
+# Local files
+*.local.*
+
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
